[gd_scene load_steps=6 format=3 uid="uid://y5rx0ss55tfs"]

[ext_resource type="Script" path="res://scripts/background_option.gd" id="1_885oi"]
[ext_resource type="Texture2D" uid="uid://tr5rc1plydqs" path="res://backgrounds/backgorund1.png" id="1_sf0rq"]

[sub_resource type="CanvasTexture" id="CanvasTexture_5cxoy"]

[sub_resource type="CanvasTexture" id="CanvasTexture_y0jar"]

[sub_resource type="CanvasTexture" id="CanvasTexture_cdbgr"]

[node name="Background_option" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -824.0
offset_bottom = -464.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_885oi")

[node name="Focus" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 135.0
offset_top = 64.0
offset_right = 175.0
offset_bottom = 104.0

[node name="Image" type="Sprite2D" parent="."]
position = Vector2(164, 92)
scale = Vector2(0.170833, 0.17037)
texture = ExtResource("1_sf0rq")

[node name="SelectedOutline" type="Node2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="SelectedOutline"]
position = Vector2(164, 0.5)
scale = Vector2(328, 1)
texture = SubResource("CanvasTexture_5cxoy")

[node name="Sprite2D2" type="Sprite2D" parent="SelectedOutline"]
position = Vector2(164, 183.5)
scale = Vector2(328, 0.999997)
texture = SubResource("CanvasTexture_5cxoy")

[node name="Sprite2D3" type="Sprite2D" parent="SelectedOutline"]
position = Vector2(0.5, 91.5)
scale = Vector2(1, 183)
texture = SubResource("CanvasTexture_y0jar")

[node name="Sprite2D4" type="Sprite2D" parent="SelectedOutline"]
position = Vector2(327.5, 91.5)
scale = Vector2(1.00001, 183)
texture = SubResource("CanvasTexture_cdbgr")

[connection signal="focus_entered" from="Focus" to="." method="_on_focus_focus_entered"]
[connection signal="focus_exited" from="Focus" to="." method="_on_focus_exited"]
[connection signal="pressed" from="Focus" to="." method="_on_focus_pressed"]
